--- a/public/src/app/modules/pages/register/register.component.css
+++ b/public/src/app/modules/pages/register/register.component.css
@@ -3,6 +3,20 @@
     margin-bottom: 16px;
 }
 
+.bgimage{
+    background-image: url('../../photographs/bg-donate-blood.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
+    display: grid;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .form {
     justify-content: center;
     align-items: center;
@@ -10,5 +24,27 @@
     padding: 20px;
     width: 320px;
     background-color: rgb(233, 229, 229);
-    margin: auto;
 }
+
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+}
+  
+  .row{
+    max-width: 100%;
+    max-height: 100%;
+    background: rgb(255, 255, 255);
+    border-radius: 10%;
+    margin: 20px auto;
+    padding: 30px;
+    margin: auto;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
