--- a/public/src/app/modules/pages/register/register.component.html
+++ b/public/src/app/modules/pages/register/register.component.html
@@ -1,91 +1,95 @@
+<div class="bgimage">
+  <div class="row">
+    <form [formGroup]="registerUserForm">
 
-<section class="form">
-  <h1> Register: </h1>
-  <form [formGroup]="registerUserForm">
-    
-      <mat-form-field appearance="fill">
-        <mat-label for="email">Email</mat-label>
-        <input required [(ngModel)]="registeringUser.email" placeholder="example@email.com" matInput formControlName="email">
-      </mat-form-field>
-    
-      <mat-form-field appearance="fill">
-        <mat-label>Password</mat-label>
-        <input required type="password" formControlName="password" matInput>
-      </mat-form-field>
-    
-      <mat-form-field appearance="fill">
-        <mat-label>Confirm password</mat-label>
-        <input required [(ngModel)]="registeringUser.password" type="password" formControlName="confirmPassword" matInput>
-      </mat-form-field>
-      
-      <div *ngIf="passwordMatchError">
-        Password does not match
+      <div class="column">
+        <div>
+          <label for="email">Email:</label>
+          <input required placeholder="example@email.com" formControlName="email">
+        </div>
+        
+        <div>
+          <label>Password:</label>
+          <input required type="password" formControlName="password">
+        </div>
+        
+        <div>
+          <label>Confirm password:</label>
+          <input required type="password" formControlName="confirmPassword">
+        </div>
+
+        <div *ngIf="passwordMatchError">
+          Password does not match
+        </div>
+        
+        <div>
+          <label>Name:</label>
+          <input required formControlName="name">
+        </div>
+        
+        <div> 
+          <label>Surname:</label>
+          <input required formControlName="surname">
+        </div>
+        
+        <div> 
+          <label>Street name:</label>
+          <input required formControlName="street">
+        </div>
+        
+        <div>
+          <label>Street number:</label>
+          <input required formControlName="number">
+        </div>
+
       </div>
-  
-      <mat-form-field appearance="fill">
-        <mat-label>Name</mat-label>
-        <input required [(ngModel)]="registeringUser.name" formControlName="name" matInput>
-      </mat-form-field>
- 
-      <mat-form-field appearance="fill">
-        <mat-label>Surname</mat-label>
-        <input required [(ngModel)]="registeringUser.surname" formControlName="surname" matInput>
-      </mat-form-field><br>
-    
-      <mat-form-field appearance="fill">
-        <mat-label>Street</mat-label>
-        <input required [(ngModel)]="registeringUser.street" formControlName="street" matInput>
-      </mat-form-field>
-    
-      <mat-form-field appearance="fill">
-        <mat-label>Number</mat-label>
-        <input required [(ngModel)]="registeringUser.number" formControlName="number" matInput>
-      </mat-form-field>
-    
-      <mat-form-field appearance="fill">
-        <mat-label>City</mat-label>
-        <input required [(ngModel)]="registeringUser.city" formControlName="city" matInput>
-      </mat-form-field>
-  
-      <mat-form-field appearance="fill">
-        <mat-label>Country</mat-label>
-        <input required [(ngModel)]="registeringUser.state" formControlName="state" matInput>
-      </mat-form-field><br>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Telephone number</mat-label>
-        <input required [(ngModel)]="registeringUser.phoneNumber" placeholder="ex: 065123456" formControlName="phoneNumber" matInput>
-      </mat-form-field>
+      <div class="column">
       
-        <mat-form-field appearance="fill">
-          <mat-label>JMBG</mat-label>
-          <input required [(ngModel)]="registeringUser.jmbg" formControlName="jmbg" matInput>
-        </mat-form-field><br>
+        <div>
+          <label>City:</label>
+          <input required formControlName="city" >
+        </div>
+            
+        <div>
+          <label>Country:</label>
+          <input required formControlName="state" >
+        </div>
+          
+        <div>
+          <label>Phone number:</label>
+          <input required placeholder="ex: 065123456" formControlName="phoneNumber">
+        </div>
+              
+        <div>
+          <label>JMBG:</label>
+          <input required formControlName="jmbg">
+        </div>
+               
+        <div>
+          <label>Gender:  </label>
+          <input type="radio" id="male" value="male">
+          <label for="male">Male</label>
+          <input type="radio" id="female" value="female">
+          <label for="female">Female</label>
+        </div>
+            
+        <div>
+          <label>Occupation:</label>
+          <input required formControlName="occupation">
+        </div>
+         
+        <div>
+          <label>Company/Univeristy/School information:</label>
+          <input required formControlName="establishmentInfo">
+        </div>
+         
+        <div><button [disabled]="!registerUserForm.valid" (click)="submit()">Register</button></div>
+      </div>
 
-      <mat-label>Gender:  </mat-label><br>
-      <mat-radio-group aria-label="Select an option" name="gender" formControlName="gender" [(ngModel)]="registeringUser.gender">
-        <mat-radio-button value="0"  name="male">Male</mat-radio-button>
-        <mat-radio-button value="1"  name="female">Female</mat-radio-button>
-      </mat-radio-group>
-
-      <section>
-        <mat-form-field appearance="fill">
-          <mat-label>Occupation</mat-label>
-          <input required [(ngModel)]="registeringUser.occupation" formControlName="occupation" matInput>
-        </mat-form-field>
-      </section>
-
-      <section>
-        <mat-form-field appearance="fill">
-          <mat-label>Company/Univeristy/School information</mat-label>
-          <input required [(ngModel)]="registeringUser.establishmentInfo" formControlName="establishmentInfo" matInput>
-        </mat-form-field>
-      </section>
-
-      <button mat-raised-button [disabled]="!registerUserForm.valid" (click)="submit()">Register</button>
     </form>
-</section>
-    
+  </div>
+</div>   
   
   
 
