--- a/public/src/app/modules/pages/login/login.component.css
+++ b/public/src/app/modules/pages/login/login.component.css
@@ -1,8 +1,78 @@
+.bgimage{
+  background-image: url('../../photographs/bg-donate-blood.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+  display: grid;
+}
+
+label {
+  padding: 8px 8px 8px 0;
+  display: inline-block;
+}
+
+input[type=text], select, textarea {
+  padding: 7px 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+  float: right;
+}
+
+input[type=password] {
+  padding: 7px 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+  float: right;
+}
+
+.field {
+  padding: 15px;
+}
+
 .form {
-    height: 270px;
-    padding: 20px;
-    width: 320px;
-    background-color: rgb(233, 229, 229);
-    border-radius: 5%;
-    margin: 1cm;
-  }
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 35px;
+  padding: 35px;
+  background: rgba(255, 255, 255, 0.904);
+  margin: auto;
+}
+
+*{
+  font-family: "Monaco", monospace;
+  font-size: 16px;
+}
+
+.logbutton {
+  background-color: #aa0404;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+.logbutton:hover{
+  background-color: #cf3535;
+}
+
+.logbutton:disabled{
+  background-color: #aaa7a7;
+}
+
+.registerLink{
+  padding: 5px;
+}
+
+.warning{
+  color: #ff0000;
+  float: right;
+}
+
+.buttons {
+  margin: 20px 0px 0px 0px;
+}
