--- a/public/src/app/modules/pages/login/login.component.html
+++ b/public/src/app/modules/pages/login/login.component.html
@@ -1,30 +1,23 @@
-<section class="form">
-    <form class="inner" [formGroup]="m_Form" (ngSubmit)="onSubmit()">
-      <h1 class="heading">Login</h1>
-      <mat-form-field appearance="fill" class="form-field">
-        <mat-label>Username</mat-label>
-        <input type="username" matInput formControlName="username"
-                placeholder="Ex. example@gmail.com">
-        <mat-error *ngIf="m_Form.controls['username'].hasError('required')">
-          Username is <strong>required</strong>
-        </mat-error>
-      </mat-form-field>
-  
-      <mat-form-field appearance="fill" class="form-field">
-        <mat-label>Password</mat-label>
-        <input type="password" matInput formControlName="password">
-        <mat-error *ngIf="m_Form.controls['password'].hasError('required')">
-          Password is <strong>required</strong>
-        </mat-error>
-      </mat-form-field>
-    
-      <div>
-        <mat-error *ngFor="let e of m_Errors">{{e}}</mat-error>
+<div class="bgimage">
+  <div class="form">
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        
+          <div class="field">
+            <label>Username: </label>
+            <input type="text"  formControlName="email">
+          </div>
+          
+          <div class="field">
+            <label>Password: </label>
+            <input type="password"  formControlName="password">
+          </div>
+          
+      </form>
+
+      <div class="buttons">
+        <button class="logbutton" [disabled]="!loginForm.valid">Login</button>
+        <div class="registerLink"> Don't have an account? </div>
+        <div class="registerLink"><a href="http://localhost:4200/register"> Register here. </a></div>
       </div>
-  
-      <div class="button-group">
-        <button type="button" mat-button>Cancel</button>
-        <button mat-flat-button color="primary">Submit</button>
-      </div>
-    </form>
-  </section>
+    </div>
+</div>
