--- a/public/src/app/modules/pages/register/register.component.css
+++ b/public/src/app/modules/pages/register/register.component.css
@@ -13,11 +13,8 @@
 }
 
 *{
-    margin: 0;
-    padding: 0;
-    font-family: "Lucida Console", "Courier New", monospace;
+  font-family: "Monaco", monospace;
 }
-
 .regbutton {
   background-color: #aa0404;
   color: white;
@@ -80,14 +77,14 @@ input[type=radio] {
 .column {
     float: left;
     width: 50%;
-    padding: 10px;
+    padding: 30px;
 }
   
 .row{
     max-width: 100%;
-    max-height: 100%;
+    max-height: 200%;
     background: rgba(255, 255, 255, 0.904);
-    border-radius: 50px;
+    border-radius: 35px;
     margin: 20px auto;
     padding: 30px;
     margin: auto;
@@ -102,7 +99,8 @@ input[type=radio] {
 }
 
 .field {
-    padding: 10px;
+    padding: 15px;
+    width: 110%;
 }
 
 .warning{
@@ -111,5 +109,7 @@ input[type=radio] {
 }
 
 .loginLink{
-  padding: 5px;
+  padding: 10px;
+  width: 50%;
+  float: left;
 }
