--- a/public/src/app/modules/pages/welcome/welcome.component.css
+++ b/public/src/app/modules/pages/welcome/welcome.component.css
@@ -2,3 +2,30 @@
     margin-left: 16px;
     margin-bottom: 16px;
   }
+
+*{
+  font-family: "Monaco", monospace;
+}
+
+.bgimage{
+  background-image: url('../../photographs/bg-donate-blood.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+  display: grid;
+}
+
+.buttons {
+  background-color: #aa0404;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+.buttons:hover{
+  background-color: #cf3535;
+}
