--- a/public/src/app/modules/pages/welcome/welcome.component.html
+++ b/public/src/app/modules/pages/welcome/welcome.component.html
@@ -1,11 +1,14 @@
-<nav class="navbar navbar-light bg-light static-top">
+
+<nav class="navbar navbar-dark bg-dark  static-top">
     <div class="container">
         <a class="navbar-brand" href="#!">Blood Donations Clinic</a>
-        <a class="btn btn-primary" href="register">Sign Up</a>
-        <a class="btn btn-primary" href="login">Sign in</a>
+        <a class="buttons" href="register">Sign Up</a>
+        <a class="buttons" href="login">Sign in</a>
     </div>
-    
 </nav>
-<div style="margin-left: 10px; margin-right: 10px;">
-    <app-blood-banks-list></app-blood-banks-list>
+
+<div class="bgimage">
+    <div style="margin-left: 10px; margin-right: 10px;">
+        <app-blood-banks-list></app-blood-banks-list>
+    </div>
 </div>
