css update and backend fixed issue

--- a/public/src/app/modules/pages/blood-banks-list/blood-banks-list.component.html
+++ b/public/src/app/modules/pages/blood-banks-list/blood-banks-list.component.html
@@ -33,7 +33,7 @@
   <!-- <button (click)="searchByName()">Search Name</button> -->
 
   <input type="text" [(ngModel)]="searchCenter.city" placeholder="City">
-  <button (click)="search()">Search</button>
+  <button class="searchb" (click)="search()">Search</button>
 </div>
 <div  style="margin-top: 5px;">
   <select [(ngModel)]="filterCountry" (change)="filterByCountry()">
