--- a/public/src/app/modules/pages/welcome/welcome.component.html
+++ b/public/src/app/modules/pages/welcome/welcome.component.html
@@ -8,7 +8,7 @@
 </nav>
 
 <div class="bgimage">
-    <div style="margin-left: 10px; margin-right: 10px;">
+    <div class="wtable">
         <app-blood-banks-list></app-blood-banks-list>
     </div>
 </div>
