--- a/public/src/app/modules/pages/register/register.component.css
+++ b/public/src/app/modules/pages/register/register.component.css
@@ -83,12 +83,13 @@ input[type=radio] {
 .row{
     max-width: 100%;
     max-height: 200%;
-    background: rgba(255, 255, 255, 0.904);
     border-radius: 35px;
     margin: 20px auto;
     padding: 30px;
     margin: auto;
     font-size: 16px;
+    background-color: rgba(32, 31, 31, 0.911);
+    color: white;
 }
   
   /* Clear floats after the columns */
