--- a/public/src/app/modules/pages/register/register.component.css
+++ b/public/src/app/modules/pages/register/register.component.css
@@ -9,12 +9,13 @@
     background-repeat: no-repeat;
     height: 100vh;
     width: 100%;
-    display: grid;
+    display: block;
 }
 
 *{
   font-family: "Monaco", monospace;
 }
+
 .regbutton {
   background-color: #aa0404;
   color: white;
@@ -33,18 +34,8 @@
   background-color: #aaa7a7;
 }
 
-.form {
-    justify-content: center;
-    align-items: center;
-    height: 1100px;
-    padding: 20px;
-    width: 320px;
-    background-color: rgb(233, 229, 229);
-}
-
 label {
-  padding: 8px 8px 8px 0;
-  display: inline-block;
+  padding: 7px;
 }
 
 input[type=text], select, textarea {
@@ -81,12 +72,11 @@ input[type=radio] {
 }
   
 .row{
-    max-width: 100%;
-    max-height: 200%;
+    max-width: 65%;
+    max-height: 100%;
     border-radius: 35px;
-    margin: 20px auto;
-    padding: 30px;
-    margin: auto;
+    padding: 10px;
+    margin: 60px auto;
     font-size: 16px;
     background-color: rgba(32, 31, 31, 0.911);
     color: white;
@@ -95,22 +85,15 @@ input[type=radio] {
   /* Clear floats after the columns */
 .row:after {
     content: "";
-    display: table;
     clear: both;
 }
 
 .field {
-    padding: 15px;
-    width: 110%;
+    padding: 10px;
+    width: 100%;
 }
 
 .warning{
   color: #ff0000;
   margin-left: 190px;
-}
-
-.loginLink{
-  padding: 10px;
-  width: 50%;
-  float: left;
 }
