--- a/public/src/app/modules/pages/welcome/welcome.component.css
+++ b/public/src/app/modules/pages/welcome/welcome.component.css
@@ -13,7 +13,7 @@
   background-repeat: no-repeat;
   height: 100vh;
   width: 100%;
-  display: grid;
+  display: block;
 }
 
 .buttons {
@@ -32,4 +32,5 @@
 
 .wtable{
   margin: 10px;
+  max-height: 100%;
 }
