--- a/public/src/app/modules/pages/register/register.component.css
+++ b/public/src/app/modules/pages/register/register.component.css
@@ -76,7 +76,7 @@ input[type=radio] {
     max-height: 100%;
     border-radius: 35px;
     padding: 10px;
-    margin: 60px auto;
+    margin: 4% auto;
     font-size: 16px;
     background-color: rgba(32, 31, 31, 0.911);
     color: white;
