--- a/public/src/app/modules/pages/login/login.component.css
+++ b/public/src/app/modules/pages/login/login.component.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   height: 100vh;
   width: 100%;
-  display: grid;
+  display: block;
 }
 
 label {
@@ -29,15 +29,15 @@ input[type=password] {
 }
 
 .field {
-  padding: 15px;
+  padding: 10px;
 }
 
 .form {
-  max-width: 100%;
+  max-width: 35%;
   max-height: 100%;
   border-radius: 35px;
-  padding: 35px;
-  margin: auto;
+  padding: 45px;
+  margin: 13% auto;
   font-size: 16px;
   background-color: rgba(32, 31, 31, 0.911);
   color: white;
@@ -65,15 +65,8 @@ input[type=password] {
   background-color: #aaa7a7;
 }
 
-.registerLink{
-  padding: 5px;
-}
-
 .warning{
   color: #ff0000;
   float: right;
 }
 
-.buttons {
-  margin: 20px 0px 0px 0px;
-}
