--- a/public/src/app/modules/pages/login/login.component.html
+++ b/public/src/app/modules/pages/login/login.component.html
@@ -12,7 +12,7 @@
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         
           <div class="field">
-            <label>Username: </label>
+            <label>Email: </label>
             <input type="text"  formControlName="email">
           </div>
           
