welcome, register and login css and html update

--- a/ISA-frontend/src/app/modules/pages/login/login.component.html
+++ b/ISA-frontend/src/app/modules/pages/login/login.component.html
@@ -3,8 +3,7 @@
   <nav class="navbar navbar-dark bg-dark  static-top">
     <div class="container">
         <a class="navbar-brand" href="#!">Blood Donations Clinic</a>
-        <a class="logbutton" href="register">Sign Up</a>
-        <a class="logbutton" href="login">Sign in</a>
+        <button class="logbutton" (click)="register()">Sign Up</button>
     </div>
   </nav>
 
