--- a/ISA-frontend/src/app/modules/pages/register/register.component.html
+++ b/ISA-frontend/src/app/modules/pages/register/register.component.html
@@ -4,8 +4,7 @@
   <nav class="navbar navbar-dark bg-dark  static-top">
     <div class="container">
         <a class="navbar-brand" href="#!">Blood Donations Clinic</a>
-        <a class="regbutton" href="register">Sign Up</a>
-        <a class="regbutton" href="login">Sign in</a>
+        <button class="regbutton" (click)="login()">Sign in</button>
     </div>
   </nav>
 
