--- a/ISA-frontend/src/app/modules/pages/welcome/welcome.component.html
+++ b/ISA-frontend/src/app/modules/pages/welcome/welcome.component.html
@@ -4,8 +4,8 @@
     <nav class="navbar navbar-dark bg-dark static-top">
         <div class="container">
             <a class="navbar-brand" href="#!">Blood Donations Clinic</a>
-            <a class="buttons" href="register">Sign Up</a>
-            <a class="buttons" href="login">Sign in</a>
+            <button class="buttons" (click)="register()">Sign Up</button>
+            <button class="buttons" (click)="login()">Sign in</button>
         </div>
     </nav>
     
