--- a/ISA-frontend/src/app/modules/pages/login/login.component.html
+++ b/ISA-frontend/src/app/modules/pages/login/login.component.html
@@ -12,7 +12,7 @@
         
           <div class="field">
             <label>Email: </label>
-            <input type="text"  formControlName="email">
+            <input type="text"  formControlName="username">
           </div>
           
           <div class="field">
