--- a/ISA-frontend/src/app/modules/pages/blood-banks-list/blood-banks-list.component.html
+++ b/ISA-frontend/src/app/modules/pages/blood-banks-list/blood-banks-list.component.html
@@ -1,33 +1,43 @@
-<table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)" class="mat-elevation-z8">
+<section>
+  <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)" class="mat-elevation-z8">
 
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-  </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="averagePoints">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by average rating"> Average Points </th>
-    <td mat-cell *matCellDef="let element"> {{element.averagePoints}} </td>
-  </ng-container>
+    <ng-container matColumnDef="averagePoints">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by average rating"> Average Points </th>
+      <td mat-cell *matCellDef="let element"> {{element.averagePoints}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="city">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by city"> City </th>
-    <td mat-cell *matCellDef="let element"> {{element.city}} </td>
-  </ng-container>
+    <ng-container matColumnDef="city">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by city"> City </th>
+      <td mat-cell *matCellDef="let element"> {{element.city}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="country">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by country"> Country </th>
-    <td mat-cell *matCellDef="let element"> {{element.country}} </td>
-  </ng-container>
+    <ng-container matColumnDef="country">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by country"> Country </th>
+      <td mat-cell *matCellDef="let element"> {{element.country}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef> Description </th>
-    <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-  </ng-container>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <mat-paginator [length]="this.length"
+                [pageSize]="this.page.pageSize"
+                [pageSizeOptions]="this.pageSizeOptions"
+                [pageIndex]="this.page.pageIndex"
+                aria-label="Select page" (page)="handlePageEvent($event)">
+  </mat-paginator>
+</section>
+
+
 <div style="margin-top: 20px;">
   <input type="text" [(ngModel)]="searchCenter.name" placeholder="Name">
   <!-- <button (click)="searchByName()">Search Name</button> -->
