--- a/ISA-frontend/src/app/modules/pages/blood-banks-list/blood-banks-list.component.css
+++ b/ISA-frontend/src/app/modules/pages/blood-banks-list/blood-banks-list.component.css
@@ -1,6 +1,7 @@
-table {
+.mat-table {
     width: 100%;
     background-color: rgba(32, 31, 31, 0.596);
+    max-height: 50%;
   }
 
 th.mat-sort-header-sorted {
@@ -13,6 +14,11 @@ th{
 
 td{
   color: white;
+}
+
+.mat-paginator{
+  background-color: #aa0404;
+  color: rgb(255, 255, 255);
 }
 
 input[type=text], select, textarea {
