created component and added to nav

--- a/ISA-frontend/src/app/modules/user/pages/nav/user-nav.component.scss
+++ b/ISA-frontend/src/app/modules/user/pages/nav/user-nav.component.scss
@@ -7,6 +7,7 @@
       right: 0;
       width: 5px;
       height: 100%;
-      background-color: #0000FF;
+      background-color: #aa0404;
     }
   }
+
