--- a/ISA-frontend/src/app/modules/user/pages/reserve-predefined-appointment/reserve-predefined-appointment.component.html
+++ b/ISA-frontend/src/app/modules/user/pages/reserve-predefined-appointment/reserve-predefined-appointment.component.html
@@ -1,3 +1,37 @@
-<p>
-  reserve-predefined-appointment works!
-</p>
+<section>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="averagePoints">
+      <th mat-header-cell *matHeaderCellDef> Average Points </th>
+      <td mat-cell *matCellDef="let element"> {{element.averagePoints}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="city">
+      <th mat-header-cell *matHeaderCellDef> City </th>
+      <td mat-cell *matCellDef="let element"> {{element.city}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="country">
+      <th mat-header-cell *matHeaderCellDef> Country </th>
+      <td mat-cell *matCellDef="let element"> {{element.country}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="predefinedAppointments">
+      <th mat-header-cell *matHeaderCellDef> Predefined Appointments </th>
+      <td mat-cell *matCellDef="let element"> <button class="regbutton"> Select </button> </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</section>
