--- a/ISA-frontend/src/app/modules/user/pages/reserve-predefined-appointment/reserve-predefined-appointment.component.html
+++ b/ISA-frontend/src/app/modules/user/pages/reserve-predefined-appointment/reserve-predefined-appointment.component.html
@@ -28,7 +28,7 @@
 
     <ng-container matColumnDef="predefinedAppointments">
       <th mat-header-cell *matHeaderCellDef> Predefined Appointments </th>
-      <td mat-cell *matCellDef="let element"> <button class="regbutton"> Select </button> </td>
+      <td mat-cell *matCellDef="let element"> <button class="regbutton" (click)="predefined(element.id)"> Select </button> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
