--- a/ISA-frontend/src/app/modules/pages/predefined-appointments-center/predefined-appointments-center.component.html
+++ b/ISA-frontend/src/app/modules/pages/predefined-appointments-center/predefined-appointments-center.component.html
@@ -18,7 +18,7 @@
 
     <ng-container matColumnDef="reserve">
       <th mat-header-cell *matHeaderCellDef> Reserve appointment </th>
-      <td mat-cell *matCellDef="let element"> <button class="regbutton"> Select </button> </td>
+      <td mat-cell *matCellDef="let element"> <button class="regbutton" (click)="reserve(element.id)"> Select </button> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
