--- a/ISA-frontend/src/app/modules/pages/blood-donor-form/blood-donor-form.component.html
+++ b/ISA-frontend/src/app/modules/pages/blood-donor-form/blood-donor-form.component.html
@@ -80,7 +80,7 @@
         </mat-radio-group>
       </section>
       <section>
-        <mat-label>11. Да ли је прошло више од 6 мјесеци кад сте посљедњи пут давали крв?
+        <mat-label>11. Да ли је прошло мање од 6 мјесеци кад сте посљедњи пут давали крв?
         </mat-label>
         <mat-radio-group aria-label="Select an option" [(ngModel)]="bloodDonorInfo.gaveBlood6Months">
           <mat-radio-button value = true  name="yes">Да </mat-radio-button>
